Fix spacing/padding

--- a/components/organisms/MediaText/MediaText.module.css
+++ b/components/organisms/MediaText/MediaText.module.css
@@ -1,5 +1,5 @@
 .mediaText {
-  @apply md:grid md:grid-cols-12 md:gap-16 mb-12;
+  @apply md:grid md:grid-cols-12 mb-12;
 
   & .text,
   & .media {
@@ -7,7 +7,7 @@
   }
 
   & .text {
-    @apply items-start;
+    @apply items-start ml-8 mr-8;
 
     & .title {
       @apply mb-8;
